# nrCascadeSim

./: .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.MersenneTwister  Makefile  Makefile.debug  Makefile_CascadePrint  README  README.md  RELEASENOTES.md  RELEASE_CHECKLIST.md  _dbs.couch  cascadePrint.cpp  cascadeProd.c  cascadeTest.cpp  codecov.yml  docs.md  edepmath.c  edepmath.h  evalCascades.cpp  get_checksums.sh  isotope_info.c  isotopes.db  leSpectrumProd.h  ncap_analysis  ncap_datapoints.txt  ncap_datapoints_v1.txt  ncap_datapoints_v2.txt  ncap_datapoints_v3.txt  ncap_datapoints_v4.txt  ncap_datapoints_v5.txt  new.txt  nndc.csv  nrCascadeSim_env.yml  nrCascadeSim_withDocs.yml  pull_request_template.md  (+4 more)
.circleci/: config.yml
.github/: checksums  install.sh  uploadtocodecov.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/example-usecase_output/: Ar_real_Lind.txt  Ar_real_Sor.txt  Ar_small_Sor.txt  Ge_real_Lind.txt  Ge_real_Sor.txt  Ge_small_Lind.txt  Ne_real_Lind.txt  Ne_real_Sor.txt  Ne_small_Lind.txt  Si_real_Lind.txt  Si_real_Sor.txt  Si_small_Lind.txt
.github/workflows/: draft-tex.yml  test.yml
.travis/: .travis.yml  baby_install.sh  checksums  install.sh  uploadtocodecov.sh
.travis/example-usecase_output/: Ar_small_Lind.txt  Ge_small_Sor.txt  Ne_small_Sor.txt  Si_small_Sor.txt
docs/: index.rst  requirements.txt
docs/source/: 01_Getting_Started.rst  02_Executables.rst  03_Doxy_Libraries.rst  03_Libraries.rst  03a_Doxy_Libraries.rst  04_Examples.rst  05_Documentation.rst  06_Citations.rst  06_Geant4_Comparison.rst  06_State_of_the_Field.rst  07_Citations.rst  07_Release_History.rst  08_License.rst  08_Release_History.rst  09_Contact.rst  Doxyfile.in  References.rst  conf.py  index.rst
doxygen/: Doxyfile
example-usecase/: README.md  Residuals.ipynb  Yields_and_Resolutions.ipynb  Yields_and_Resolutions.py  Yields_and_Resolutions_Ge.ipynb  Yields_and_Resolutions_Si.ipynb  ZZ_CompareFiles.ipynb  Z_G4Comparison.ipynb  environment.yml  generate.sh  process.py  prune.py  requirements.txt  test_local.py
example-usecase/data/: Ar_real_Lind_s0.txt  Ar_real_Sor_s0.txt  Ar_small_Lind_s0.txt  Ar_small_Sor_s0.txt  Arfile.root  Arfile.txt  Arfile_summed.txt  Ge_real_Lind_s0.txt  Ge_real_Sor_s0.txt  Ge_small_Lind_s0.txt  Ge_small_Sor_s0.txt  Gefile.root  Gefile.txt  Gefile_summed.txt  Ne_real_Lind_s0.txt  Ne_real_Sor_s0.txt  Ne_small_Lind_s0.txt  Ne_small_Sor_s0.txt  Nefile.root  Nefile.txt  Nefile_summed.txt  Si_small_Lind_s0.txt  Si_small_Sor_s0.txt  Sifile.root  Sifile.txt  Sifile_summed.txt
example-usecase/python/: hist.py
inc/: cascadeCompute.h  cascadeProd.h  edepmath.h  isotope_info.h  leSpectrumProd.h  lindhard.h  rootUtil.h  weisskopf.h
levelfiles/: 20ne_ngam.txt  28si_ngam.txt  28si_ngam_WFast.txt  28si_ngam_WSlow.txt  28si_ngam_inf.txt  29si_ngam.txt  29si_ngam_WFast.txt  29si_ngam_WSlow.txt  29si_ngam_inf.txt  30si_ngam.txt  30si_ngam_WFast.txt  30si_ngam_WSlow.txt  30si_ngam_inf.txt  40ar_ngam.txt  40ar_ngam_WFast.txt  40ar_ngam_WSlow.txt  40ar_ngam_inf.txt  70ge_ngam.txt  70ge_ngam_WSlow.txt  70ge_ngam_inf.txt  72ge_ngam_WFast.txt  72ge_ngam_WSlow.txt  72ge_ngam_inf.txt  73ge_ngam.txt  73ge_ngam_WFast.txt  73ge_ngam_WSlow.txt  73ge_ngam_inf.txt  74ge_ngam_WFast.txt  74ge_ngam_WSlow.txt  74ge_ngam_inf.txt  G4_70ge.txt  G4_73ge.txt  README  README.md  Si28_ngam_all_cascades  Si28_ngam_all_cascades_rfmt_sorted.txt  Si28_ngam_tau_test_fast  Si28_ngam_tau_test_slow  allge_ngam_WFast.txt  allge_ngam_WSlow.txt  (+22 more)
levelfiles/Geant4/: G4_29si.txt  G4_72ge.txt
levelfiles/spreadsheet/: aluminum.xlsx  argon.xlsx  calcium.xlsx  cesium.xlsx  germanium.xlsx  iodine.xlsx  neon.xlsx  oxygen.xlsx  silicon.xlsx  sodium.xlsx  tellurium.xlsx  tungsten.xlsx  xenon.xlsx
levelfiles/under-development/: 72ge_ngam.txt  74ge_ngam.txt  cross_sections_and_abundance.txt  cross_sections_and_abundance_and_scaling.txt  natSi_all.txt  natSi_no2steppeak29.txt  natSi_residuals.txt  v3_28Si_all.txt  v3_30Si_4biggest.txt  v3_30Si_4biggest_scaled.txt  v3_cross_sections_and_abundance.txt  v3_cross_sections_and_abundance_and_scaling.txt
levelfiles/under-development/Geant4/: G4_28si.txt  G4_30si.txt  G4_74ge.txt  README.md
lib/: README.md
macros/: cascadeProd.C  histTools.C  kinematics.C  significance.C  weisskopf.C
paper/: paper.md  references.bib
scripts/: README.md  cascade_finder_commands.txt  csv2db.py
src/: cascadeCompute.c  cascadeProd.c  cascadeProd.cpp  edepmath.c  leSpectrumProd.c  lindhard.c  rootUtil.c  rootUtil.cpp  weisskopf.c  weisskopf.cpp
test-example/: Yields_and_Resolutions.ipynb
tests/: README.md  isempty.py  test_examples.sh  test_realizeCascades  test_realizeCascades.sh
tests/sample_outputs/: sample_isotope_output.txt  sample_levelfile_output_Si28ngam.txt  sample_yield_output.txt
